// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/request_button/request_button.jsx should match snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="col-sm-offset-4 col-sm-8"
  >
    <div>
      <button
        className="btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <Memo(LoadingWrapper)
          loading={false}
          text={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Loading..."
              id="admin.requestButton.loading"
            />
          }
        >
          <MemoizedFormattedMessage
            defaultMessage="Button Text"
            id="test2"
          />
        </Memo(LoadingWrapper)>
      </button>
    </div>
    <div
      className="help-text"
    >
      <MemoizedFormattedMessage
        defaultMessage="Help Text"
        id="test1"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 1`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Error Message: {error}",
      "id": "error.message",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={true}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Test Successful",
      "id": "admin.requestButton.requestSuccess",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Memo(LoadingWrapper)
            loading={false}
            text={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Loading..."
                id="admin.requestButton.loading"
              />
            }
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </Memo(LoadingWrapper)>
        </button>
        <div>
          <div
            className="alert alert-warning"
          >
            <Memo(WarningIcon)>
              <i
                className="fa fa-warning"
                title="Warning Icon"
              />
            </Memo(WarningIcon)>
            <FormattedMessage
              defaultMessage="Error Message: {error}"
              id="error.message"
              values={
                Object {
                  "error": "__message__ - __detailed_error__",
                }
              }
            >
              <span>
                Error Message: __message__ - __detailed_error__
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 2`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Error Message: {error}",
      "id": "error.message",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Test Successful",
      "id": "admin.requestButton.requestSuccess",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Memo(LoadingWrapper)
            loading={false}
            text={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Loading..."
                id="admin.requestButton.loading"
              />
            }
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </Memo(LoadingWrapper)>
        </button>
        <div>
          <div
            className="alert alert-warning"
          >
            <Memo(WarningIcon)>
              <i
                className="fa fa-warning"
                title="Warning Icon"
              />
            </Memo(WarningIcon)>
            <FormattedMessage
              defaultMessage="Error Message: {error}"
              id="error.message"
              values={
                Object {
                  "error": "__message__",
                }
              }
            >
              <span>
                Error Message: __message__
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 1`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Test Failure: {error}",
      "id": "admin.requestButton.requestFailure",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Success Message",
      "id": "success.message",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Memo(LoadingWrapper)
            loading={false}
            text={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Loading..."
                id="admin.requestButton.loading"
              />
            }
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </Memo(LoadingWrapper)>
        </button>
        <div>
          <div
            className="alert alert-success"
          >
            <SuccessIcon>
              <i
                className="fa fa-check"
                title="Success Icon"
              />
            </SuccessIcon>
            <FormattedMessage
              defaultMessage="Success Message"
              id="success.message"
            >
              <span>
                Success Message
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 2`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Test Failure: {error}",
      "id": "admin.requestButton.requestFailure",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={false}
  successMessage={
    Object {
      "defaultMessage": "Success Message",
      "id": "success.message",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Memo(LoadingWrapper)
            loading={false}
            text={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Loading..."
                id="admin.requestButton.loading"
              />
            }
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </Memo(LoadingWrapper)>
        </button>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;
